manuscripts/elife-20178/v1/manuscript_v1.md
# The heritability of multi-modal connectivity in human brain activity

## Authors

- Giles L Colclough<sup>1</sup> ([ORCID: 0000-0003-1074-7186](https://orcid.org/0000-0003-1074-7186)) †
- Stephen M Smith<sup>1</sup>
- Tom E Nichols<sup>2</sup>
- Anderson M Winkler<sup>1</sup>
- Stamatios N Sotiropoulos<sup>1</sup>
- Matthew F Glasser<sup>3</sup>
- David C Van Essen<sup>4</sup> ([ORCID: 0000-0001-7044-4721](https://orcid.org/0000-0001-7044-4721))
- Mark W Woolrich<sup>1</sup>

### Affiliations

1. Oxford Centre for Human Brain Activity University of Oxford Oxford United Kingdom
2. Department of Statistics and WMG University of Warwick Coventry United Kingdom
3. School of Medicine Washington University St. Louis United States
4. School of Medicine Washington University in St Louis St. Louis United States

† Corresponding author

## Abstract

Patterns of intrinsic human brain activity exhibit a profile of functional connectivity that is associated with behaviour and cognitive performance, and deteriorates with disease. This paper investigates the relative importance of genetic factors and the common environment between twins in determining this functional connectivity profile. Using functional magnetic resonance imaging (fMRI) on 820 subjects from the Human Connectome Project, and magnetoencephalographic (MEG) recordings from a subset, the heritability of connectivity between 39 cortical regions was estimated. On average over all connections, genes account for about 15% of the observed variance in fMRI connectivity (and about 10% in alpha-band and 20% in beta-band oscillatory power synchronisation), which substantially exceeds the contribution from the environment shared between twins. Therefore, insofar as twins share a common upbringing, it appears that genes, rather than the developmental environment, play a dominant role in determining the coupling of neuronal activity.
